--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<h1 class="center">Practice Time!</h1>
+<app-header></app-header>
+<app-user-input (calcuate)="calculateInvestmentResults($event)" />
+<app-investment-results [results]="resultsData"/>
