--- a/src/app/investment-results/investment-results.component.html
+++ b/src/app/investment-results/investment-results.component.html
@@ -1,5 +1,6 @@
-<p>Please enter some values and press "Calculate".</p>
-
+@if(!results){
+<p class="center">Please enter some values and press "Calculate".</p>
+} @else {
 <table>
   <thead>
     <tr>
@@ -10,4 +11,17 @@
       <th>Invested Capital</th>
     </tr>
   </thead>
+  <tbody>
+    @for(result of results; track result.year) {
+    <tr>
+      <td>{{ result.year }}</td>
+      <td>{{ result.interest | currency }}</td>
+      <td>{{ result.year | currency }}</td>
+      <td>{{ result.totalAmountInvested | currency }}</td>
+      <td>{{ result.valueEndOfYear | currency }}</td>
+    </tr>
+
+    }
+  </tbody>
 </table>
+}
